alignment-fix

--- a/src/app/components/ad-bg-remover/ad-bg-remover.component.scss
+++ b/src/app/components/ad-bg-remover/ad-bg-remover.component.scss
@@ -19,3 +19,7 @@
 
   color: #1c1e52;
 }
+
+.content-box {
+  height: 600px;
+}
