--- a/src/styles.scss
+++ b/src/styles.scss
@@ -132,7 +132,6 @@ picture .cocoen > div {
 
 .btn-box button {
   width: 178px;
-  height: 43px;
   left: 787px;
   top: 2610px;
   border: none;
